--- a/libft/src/libstr/Makefile
+++ b/libft/src/libstr/Makefile
@@ -5,9 +5,9 @@ CFLAGS = -Wall -Werror -Wextra -g3 $(INCLUDES)
 
 SRC = src
 SRC_FILES = ft_atoi.c ft_atoi_base.c ft_atol.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c \
-ft_isprint.c ft_issign.c ft_itoa.c ft_itoa.c ft_split.c ft_destroy_char_matrix.c ft_strchr.c \
-ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c \
-ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c
+ft_isprint.c ft_issign.c ft_itoa.c ft_itoa.c ft_split.c ft_str_isdigit.c ft_str_ishexa.c ft_str_tolower.c \
+ft_destroy_char_matrix.c ft_strchr.c ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c \
+ft_strlen.c ft_strmapi.c ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c
 
 OBJ = obj
 OBJ_FILES := $(SRC_FILES:%.c=$(OBJ)/%.o)
