--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,9 @@
 		"parser.h": "c",
 		"reader.h": "c",
 		"fcntl.h": "c",
-		"functional": "c"
+		"functional": "c",
+		"array": "c",
+		"string": "c",
+		"string_view": "c"
 	}
 }
