--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
 		"mlx.h": "c",
 		"bresenham.h": "c",
 		"line_interface.h": "c",
-		"parser.h": "c",
+		"parse_file.h": "c",
 		"reader.h": "c",
 		"fcntl.h": "c",
 		"functional": "c",
