building lines && ordering file-structure && add README

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
 		"libft.h": "c",
 		"build_lines.h": "c",
 		"viewer_line.h": "c",
-		"viewer_context.h": "c"
+		"viewer_context.h": "c",
+		"bresenham_algo.h": "c"
 	}
 }
